# ndhc

./: .gitignore  CMakeLists.txt  ChangeLog  DESIGN  LICENSE  Makefile  README  README.ifchd  README.md  TODO  arp.c  arp.h  cfg.c  cfg.h  cfg.rl  chroot.c  chroot.h  coroutine.h  dhcp.c  dhcp.h  dnslabeldecomp.c  dnslabeldecomp.h  duiaid.c  duiaid.h  ifchange.c  ifchange.h  ifchd-parse.c  ifchd-parse.h  ifchd-parse.rl  ifchd.c  ifchd.h  ifproto.h  ifset.c  ifset.h  leasefile.c  leasefile.h  linux.h  log.h  ndhc-defines.h  ndhc.8  (+23 more)
examples/: s6.run  wan0.conf
ifchd/: CMakeLists.txt  DESIGN  README.ifchd  defines.h  ifch_proto.h  ifchd-defines.h  ifchd-parse.rl  ifchd.8  ifchd.c  linux.c  linux.h  log.c  nstrl.h  signals.h  strlist.c  strlist.h
init/openrc/: ndhc.wan0
ncmlib/: CMakeLists.txt  cap.c  cap.h  chroot.c  chroot.h  defines.h  io.c  io.h  log.c  log.h  malloc.c  malloc.h  pidfile.c  pidfile.h  random.c  random.h  signals.c  signals.h  strl.c  strl.h  strlist.c  strlist.h
ndhc/: CMakeLists.txt  MODIFICATIONS  Makefile  README  TODO  arp.c  arp.h  arpping.c  arpping.h  clientpacket.c  clientpacket.h  config.h  dhcp.c  dhcp.h  dhcpc.c  dhcpc.h  dhcpd.h  dhcpmsg.c  dhcpmsg.h  duiaid.c  duiaid.h  ifch_proto.h  ifchange.c  ifchange.h  ifchd-parse.h  ifchd-parse.rl  ifchd.c  ifchd.h  ifset.c  ifset.h  leasefile.c  leasefile.h  leases.h  log.c  log.h  ndhc-defines.h  ndhc.8  ndhc.c  ndhc.h  netlink.c  (+25 more)
nk/: copy_cmdarg.h  exec.c  exec.h  hwrng.c  hwrng.h  io.c  io.h  log.h  net_checksum16.h  nstrcpy.h  privs.c  privs.h  pspawn.c  pspawn.h  random.c  random.h  stb_sprintf.c  stb_sprintf.h
src/: CMakeLists.txt  arp.c  arp.h  cfg.h  cfg.rl  coroutine.h  dhcp.c  dhcp.h  duiaid.c  duiaid.h  ifchange.c  ifchange.h  ifchd-parse.h  ifchd-parse.rl  ifchd.c  ifchd.h  ifset.c  ifset.h  leasefile.c  leasefile.h  ndhc-defines.h  ndhc.8  ndhc.c  ndhc.h  netlink.c  netlink.h  nl.c  nl.h  options.c  options.h  rfkill.c  rfkill.h  seccomp.c  seccomp.h  sockd.c  sockd.h  state.c  state.h  sys.c  sys.h
src/lib/: hwrng.c  io.c  log.c  privs.c
src/nk/: hwrng.h  io.h  log.h  net_checksum.h  net_checksum16.h  random.h
